[package]
name = "screenshots"
version = "0.1.1"
authors = ["Hermann Schwarz <schwarz@dipf.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
failure = "0.1.8"
mysql = "15.1.2"
url = "2.1.1"
